--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+.Weather {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+  max-width: 600px;
+  margin:20px auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 50px;
+  color: #6e5773;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.city-input {
+  width: 300px;
+  padding: 10px 10px;
+  border: none;
+  background-color: #e9e2d0;
+  font-size: 16px;
+  border-radius: 6px;
+  margin-top: 30px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-button {
+  padding: 10px 30px;
+  background-color: #6e5773;
+  border: none;
+  border-radius: 6px;
+  margin-left: 5px;
+  margin-top: 30px;
+}
+.weather-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 50px;
+  padding-left: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.weather-icon {
+  width: 98px;
+  height: 98px;
+  margin-top: 20px;
 }
+.weather-temperature {
+  font-size: 98px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-weight: bold;
+  color: #393e46;
+  margin-left: 10px;
+}
+.weather-temperature-unit {
+  font-size: 30px;
+  color: #393e46;
+  margin-top: 35px;
+}
+.main-container {
+  display: flex;
+  justify-content: space-between;
+}
+.weather-details {
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 500;
+  color: rgba(39, 33, 66, 0.4);
+  margin: 50px 50px 0px 0px;
+  padding-right: 20px;
+}
+.weather-details .humidity-input {
+  color: #6e5773;
+  font-weight: bold;
+}
+.weather-details .wind-input {
+  color: #6e5773;
+  font-weight: bold;
 }
