--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,40 @@
 .Weather {
-  border: solid 1px;
+  border: solid 1px #dadde1;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+  border-radius: 10px;
+  color: rgb(135,135,135);
+}
+
+.Weather h1{
+  font-size: 24px;
+  margin: 20px 0 0 0;
+  line-height: 29px;
+}
+.Weather ul{
+  margin: 0;
+  padding: 0;
+}
+.Weather li{
+  font-size: 16px;
+ list-style: none;
+ font-weight: 100;
+ line-height: 20px;
+
+}
+.Weather .temperature{
+  color: rgb(33,33,33);
+  font-size: 64px;
+  font-weight: bold;
+  line-height: 64px;
+  margin-left: 10px;
+}
+
+.Weather .unit{
+  color: rgb(33,33,33);
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  line-height: 1;
+  top:-30px;
 }
